codeserver/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-outpost
  namespace: codeserver
spec:
  forwardAuth:
    address: https://idp.nicknoonan.net/outpost.goauthentik.io/auth/traefik
    trustForwardHeader: true
    authRequestHeaders:
      - Connection
      - Upgrade
      - Authorization
      - Cookie
    authResponseHeaders:
      - X-authentik-username
      - X-authentik-groups
      - X-authentik-email
      - X-authentik-name
      - X-authentik-uid
      - X-authentik-jwt
      - X-authentik-meta-jwks
      - X-authentik-meta-outpost
      - X-authentik-meta-provider
      - X-authentik-meta-app
      - Authorization
