codeserver/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codeserver
  namespace: codeserver
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: codeserver
  template:
    metadata:
      labels:
        app: codeserver
    spec:
      nodeSelector:
        kubernetes.io/hostname: bigboi
      tolerations:
      - key: bigboi
        operator: Exists
        effect: NoSchedule
      containers:
      - name: codeserver
        image: ghcr.io/nicknoonan/k8cluster/codeserver:sha-00cdc7d
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: codeserver-data
          mountPath: /config
        - name: kubeconfig
          mountPath: /etc/kubeconfig
          readOnly: true
        # 1. Mount the host Docker socket into the container
        - name: docker-socket
          mountPath: /var/run/docker.sock
        resources:
          requests:
            cpu: "2000m"
            memory: "8Gi"
          limits:
            cpu: "8000m"
            memory: "8Gi"
      volumes:
      - name: codeserver-data
        persistentVolumeClaim:
          claimName: codeserver
      - name: kubeconfig
        secret:
          secretName: kubeconfig-secret
          defaultMode: 0444
      # 2. Define hostPath volume pointing to host's Docker socket
      - name: docker-socket
        hostPath:
          path: /var/run/docker.sock
          type: Socket
