codeserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codeserver
  namespace: codeserver
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  selector:
    app: codeserver
