codeserver/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codeserver
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - code.nicknoonan.net
      secretName: codeserver-tls
  rules:
    - host: code.nicknoonan.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: codeserver
                port:
                  number: 8080
